--- a/package.json
+++ b/package.json
@@ -5,11 +5,45 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "yarn lint:tsc ; yarn lint:eslint",
+    "lint:tsc": "tsc -p tsconfig.json --noEmit",
+    "lint:eslint": "eslint '**/*.{tsx,ts,js,jsx,json}' --fix"  
   },
   "dependencies": {
+    "@apollo/client": "^3.3.12",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "authorizenet": "^1.0.7",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tsc": "^2.0.0",
+    "graphql": "^15.5.0",
+    "husky": "^5.1.3",
+    "lint-staged": "^10.5.4",
     "next": "10.0.9",
+    "prettier": "^2.2.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sass": "^1.32.8",
+    "typescript": "^4.2.3"
+  },
+ "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{tsx,ts,js,jsx,json}": [
+      "eslint --fix --plugin tsc --rule 'tsc/config: [2, {configFile: \"./tsconfig.json\"}]'"
+    ]
   }
 }
