--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "yarn lint:tsc ; yarn lint:eslint",
     "lint:tsc": "tsc -p tsconfig.json --noEmit",
-    "lint:eslint": "eslint '**/*.{tsx,ts,js,jsx,json}' --fix"  
+    "lint:eslint": "eslint '**/*.{tsx,ts,js,jsx,json}' --fix"
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
@@ -29,14 +29,14 @@
     "graphql": "^15.5.0",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
-    "next": "10.0.9",
+    "next": "^10.0.9",
     "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.32.8",
     "typescript": "^4.2.3"
   },
- "husky": {
+  "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
