--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/react-icons": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "authorizenet": "^1.0.7",
@@ -33,6 +34,7 @@
     "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
     "sass": "^1.32.8",
     "typescript": "^4.2.3"
   },
