--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@contentful/rich-text-html-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@types/node": "^14.14.35",
+    "@types/nodemailer": "^6.4.1",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/react-icons": "^3.0.0",
@@ -33,6 +34,7 @@
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
     "next": "^10.0.9",
+    "nodemailer": "^6.5.0",
     "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
