--- a/package.json
+++ b/package.json
@@ -31,16 +31,18 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tsc": "^2.0.0",
+    "formidable": "^1.2.2",
     "graphql": "^15.5.0",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
-    "next": "^10.0.9",
+    "next": "^10.1.3",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.5.0",
     "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
+    "react-quill": "^1.3.5",
     "sass": "^1.32.8",
     "typescript": "^4.2.3"
   },
