--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@apollo/client": "^3.3.12",
     "@contentful/rich-text-html-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
+    "@types/formidable": "^1.2.1",
     "@types/node": "^14.14.35",
     "@types/node-fetch": "^2.5.10",
     "@types/nodemailer": "^6.4.1",
+    "@types/quill": "^2.0.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/react-icons": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "authorizenet": "^1.0.7",
+    "contentful-management": "^7.18.2",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
