--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@apollo/client": "^3.3.12",
     "@contentful/rich-text-html-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
+    "@types/formidable": "^1.2.1",
     "@types/node": "^14.14.35",
+    "@types/node-fetch": "^2.5.10",
     "@types/nodemailer": "^6.4.1",
+    "@types/quill": "^2.0.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/react-icons": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "authorizenet": "^1.0.7",
+    "contentful-management": "^7.18.2",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
@@ -30,15 +34,18 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tsc": "^2.0.0",
+    "formidable": "^1.2.2",
     "graphql": "^15.5.0",
     "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
-    "next": "^10.0.9",
+    "next": "^10.1.3",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.5.0",
     "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
+    "react-quill": "^1.3.5",
     "sass": "^1.32.8",
     "typescript": "^4.2.3"
   },
