--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@apollo/client": "^3.3.12",
     "@contentful/rich-text-html-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
+    "@types/cookie": "^0.4.0",
     "@types/formidable": "^1.2.1",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
     "@types/node-fetch": "^2.5.10",
     "@types/nodemailer": "^6.4.1",
@@ -26,6 +28,7 @@
     "@typescript-eslint/parser": "^4.18.0",
     "authorizenet": "^1.0.7",
     "contentful-management": "^7.18.2",
+    "cookie": "^0.4.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
@@ -37,6 +40,7 @@
     "formidable": "^1.2.2",
     "graphql": "^15.5.0",
     "husky": "^5.1.3",
+    "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.4",
     "next": "^10.1.3",
     "node-fetch": "^2.6.1",
