--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "node server.js"
+
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
     "@contentful/rich-text-html-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@types/cookie": "^0.4.0",
+    "@types/express": "^4.17.12",
     "@types/formidable": "^1.2.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
@@ -34,8 +36,10 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tsc": "^2.0.0",
+    "express": "^4.17.1",
     "formidable": "^1.2.2",
     "graphql": "^15.5.0",
+    "heroku-ssl-redirect": "^0.1.1",
     "husky": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.4",
