--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "node server.js"
-
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
     "@contentful/rich-text-html-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@types/cookie": "^0.4.0",
+
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/formidable": "^1.2.1",
     "@types/jsonwebtoken": "^8.5.1",
@@ -28,6 +29,7 @@
     "authorizenet": "^1.0.7",
     "contentful-management": "^7.18.2",
     "cookie": "^0.4.1",
+    "cors": "^2.8.5",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
