--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "engines": {
-    "node": "^18.0.0"
+    "node": "^16.0.0 <17.0.0"
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
