--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "authorizenet": "^1.0.7",
+    "autoprefixer": "^10.4.13",
     "contentful-management": "^7.18.2",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
@@ -47,15 +48,17 @@
     "husky": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.4",
-    "next": "^10.1.3",
+    "next": "^13.1.5",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.5.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.2.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "react-quill": "^1.3.5",
     "sass": "^1.32.8",
-    "typescript": "^4.2.3"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   }
 }
